# advent-of-code-2021

./: .clippy.toml  Cargo.toml  README.md
src/day1/: part1.rs  part2.rs
src/day10/: part1.rs  part2.rs
src/day11/: part1.rs  part2.rs
src/day12/: part1.rs  part2.rs
src/day13/: part1.rs  part2.rs
src/day14/: part1.rs  part2.rs
src/day15/: part1.rs  part2.rs
src/day2/: part1.rs  part2.rs
src/day3/: part1.rs  part2.rs
src/day4/: part1.rs  part2.rs
src/day5/: part1.rs  part2.rs
src/day6/: part1.rs  part2.rs
src/day7/: part1.rs  part2.rs
src/day8/: part1.rs  part2.rs
src/day9/: part1.rs  part2.rs
