[package]
name = "advent-of-code-2021"
version = "1.0.0"
edition = "2021"
authors = ["Jacob Prud'homme"]
description = "Solutions for the Advent of Code 2021, in Rust"
repository = "https://github.com/jacobprudhomme/advent-of-code-2020"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retain_mut = "0.1.5"

[[bin]]
name = "day1-part1"
path = "src/day1/part1.rs"

[[bin]]
name = "day1-part2"
path = "src/day1/part2.rs"

[[bin]]
name = "day2-part1"
path = "src/day2/part1.rs"

[[bin]]
name = "day2-part2"
path = "src/day2/part2.rs"

[[bin]]
name = "day3-part1"
path = "src/day3/part1.rs"

[[bin]]
name = "day3-part2"
path = "src/day3/part2.rs"
